--- a/main.html
+++ b/main.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="app" class="day">
+    <main id="app" class="day">
       <!-- html markup here -->
       <p id="ptag">
         I am an AccioJob student, ready to become an awesome full stack developer.
       </p>
-      <button id="swap" class="buttond_day">Swap</button>
-    </div>
+      <button id="swap" class="buttond_night">Swap</button>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
